# AutoPybot

./: 3.6.2  LICENSE  README.md  pyproject.toml
html/: index.js
html/my_autopybot/: CrashHandler.html  Engine.html  chrome39.html  citrix39.html  clipboard39.html  converters39.html  database39.html  datascience39.html  excel39.html  folder39.html  helpers.html  images39.html  index.html  keyboard39.html  mail39.html  message39.html  mouse39.html  pdf39.html  pdoc_config.html  scheduler39.html  screen_scraping39.html  string39.html  utility39.html  voice39.html  windows39.html
html/my_autopybot/resources/: index.html
my_autopybot/: CrashHandler.py  Engine.py  __init__.py  ai_models.ipynb  chrome39.py  citrix39.py  clipboard39.py  converters39.py  database39.py  doctr1.ipynb  excel39.py  excel_macro39.py  folder39.py  helpers.py  images39.py  keyboard39.py  layout_parser_1.py  layout_parser_2.py  layout_parser_3.py  mail39.py  message39.py  ml_algorithms.ipynb  mouse39.py  new_functions.ipynb  pdf39.py  pw.py  scheduler39.py  screen_scraping39.py  string39.py  utility39.py  voice39.py  windows39.py
my_autopybot_tests/: generate_tests.py
templates/: config.mako  logo.mako
tests/: test_auto_pybot.py
