[tool.poetry]
name = "my_autopybot"
version = "1.6"
description = "Auto-Pylot is a Python based RPA platform for Software BOT development as an Open Source project. We strive to liberate humans from mundane, repetitive tasks, giving them more time to use their intellect and creativity to solve higher-order business challenges and perform knowledge work. We see a world where every employee will work side by side with Digital Workers, taking the robot out of the human, making them exponentially more productive and far more fulfilled."
authors = ["PyBots <support@pybots.ai>"]
license = "BSD"
readme = "README.md"
homepage = ""
repository = ""
documentation = "https://auto-pylot.re.veadthedocs.io/"
keywords = ["PyBots","autopilot","auto pylot","RPA","Python","Automation","BOT","Software BOT","Auto Pilot","Dost"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Environment :: Win32 (MS Windows)',
    'Intended Audience :: Developers',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Financial and Insurance Industry',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'Topic :: Software Development :: Build Tools',
    'Topic :: Home Automation',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Operating System :: Microsoft :: Windows',
    'Framework :: Robot Framework',
    'Framework :: Robot Framework :: Library',
    'Framework :: Robot Framework :: Tool',
    'Programming Language :: Python',
]
include = ["my_autopybot/*.pyd", "my_autopybot/resources/*", "my_autopybot/*.pye", "my_autopybot/__init__.py", "my_autopybot/Engine.py"]

[tool.poetry.urls]



[tool.poetry.dependencies]
python = ">=3.8.0,<=3.10.40"
SpeechRecognition = "^3.8.1"
speedtest-cli = "^2.1.3"
helium = "^3.0.8"
webdriver-manager = "^3.5.3"
PyGetWindow = "^0.0.9"
pyinspect = "^0.1.0"
pandas = "^1.4.1"
PyScreeze = "^0.1.28"
Pillow = "^9.0.1"
psutil = "^5.9.0"
openpyxl = "^3.0.9"
xlsx2html = "^0.4.0"
xlwt = "^1.3.0"
pivottablejs = "^0.9.0"
plotly = "^5.7.0"
kaleido = "0.2.1"
yagmail = "^0.15.277"
pdfplumber = "^0.6.0" 
opencv-python = "^4.5.5"
matplotlib = "^3.5.1"
imutils = "^0.5.4"
pyttsx3 = "^2.90"
sourcedefender = "^10.0.3"
xls2xlsx = "^0.1.5"
gspread = "^5.3.2"
gspread-dataframe = "^3.3.0"
oauth2client = "^4.1.3"
pendulum = "^2.1.2"
pywinauto = "^0.6.8"
pytesseract = "^0.3.9"
Cython = "^0.29.30"
langdetect = "^1.0.9"
googletrans = "4.0.0-rc1"
textblob = "^0.17.1"
spacy = "^3.4.1"
PassportEye = "^2.2.0"
easyocr = "^1.6.2"
xlwings = "^0.28.2"
pdf2image = "^1.16.0"
exif = "^1.3.5"
duckdb = "^0.5.1"
pandasql = "^0.7.3"
PyPDF2 = "^2.11.1"
fillpdf = "^0.7.2"
scikit-learn = "^1.1.3"
"pdfminer.six" = "20211012"
layoutparser = "^0.3.4"
pywin32 = "^305"
tensorflow = "2.10"
fpdf = "^1.7.2"
playwright = "^1.29.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
ipykernel = "^6.13.0"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
